fix: [PIE-1056]: Fixed the floating view z-index (#5033)

--- a/src/modules/70-pipeline/components/ExecutionLayout/ExecutionLayoutFloatingView.module.scss
+++ b/src/modules/70-pipeline/components/ExecutionLayout/ExecutionLayoutFloatingView.module.scss
@@ -1,6 +1,7 @@
 .floatingView {
   position: fixed;
   bottom: 0;
+  z-index: 1;
   right: 60px;
 
   :global(#pipeline-step-details-drag) {
